<resources>
    <string name="about">About Us</string>
    <string name="ad_loading">Ads Space</string>
    <string name="add_new_song">Add new song</string>
    <string name="add_new_video">Add new video</string>
    <string name="add_song">Add song</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="add_video">Add video</string>
    <string name="ads_loading">Ads Loading…</string>
    <string name="album">Album</string>
    <string name="all">All</string>
    <string name="all_album">Albums (%d)</string>
    <string name="all_artist">Artists (%d)</string>
    <string name="all_folder">Folders (%d)</string>
    <string name="all_history">Histories (%d)</string>
    <string name="all_music">All musics (%d)</string>
    <string name="all_playlist">Playlists (%d)</string>
    <string name="all_video">All videos (%d)</string>
    <string name="all_videos">All Videos</string>
    <string name="allow">Allow</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="an_error_occurred_try_again">An error occurred, please check the link again</string>
    <string name="app_name">VideoX</string>
    <string name="app_not_available">App Not Available.</string>
    <string name="artist">Artist</string>
    <string name="ascending">Ascending</string>
    <string name="auto">Auto</string>
    <string name="auto_play_next">Auto Play Next</string>
    <string name="back_press_question">Press the back button again to exit</string>
    <string name="bass_booster">Bass Booster</string>
    <string name="btn_title_continue">Continue</string>
    <string name="btn_title_not_selected">Not Selected</string>
    <string name="btn_title_receive">Receive</string>
    <string name="btn_title_send">Send</string>
    <string name="btn_title_send_files">Send Files</string>
    <string name="build_vlc_revision">d03636d2c</string>
    <string name="buy_premium">Buy premium and get add free features</string>
    <string name="cancel">Cancel</string>
    <string name="cbs_btn_negative">Cancel</string>
    <string name="cbs_btn_positive">Report</string>
    <string name="cbs_description">Some problem occurred in Apna Share!10Please take a moment to report it and help developers to improve this app.</string>
    <string name="cbs_drawable_description">Apna Share Logo</string>
    <string name="cbs_title">@string/app_name</string>
    <string name="chances_value">Chances: %s</string>
    <string name="change_pin">Change PIN</string>
    <string name="chip_text">Chip text</string>
    <string name="chooser_title_file">Open File</string>
    <string name="chooser_title_image">View Image</string>
    <string name="chooser_title_music">Play Music</string>
    <string name="chooser_title_video">Play Video</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="color">Color</string>
    <string name="coming_soon">Coming soon</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_coin">You earn %s coins</string>
    <string name="congratulations_vip">You can use the premium plan until %s</string>
    <string name="contain_ads">This action can contain ads</string>
    <string name="content_desc_for_close_btn">close</string>
    <string name="content_desc_for_icon">icon</string>
    <string name="content_desc_for_play">Play</string>
    <string name="content_desc_for_receiver_icon">receiver icon</string>
    <string name="content_desc_for_remove">Remove</string>
    <string name="content_desc_for_selection">Marked for selection</string>
    <string name="content_desc_for_sheet_handle">handle</string>
    <string name="content_desc_for_thumbnail">thumbnail</string>
    <string name="continues">Continue</string>
    <string name="convert_instr">Are you sure you want to convert this video to MP3?</string>
    <string name="convert_mp3_wait_moment">Converting to Mp3, please wait a moment…</string>
    <string name="convert_to_mp3">Convert to mp3</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="current_language">English</string>
    <string name="custom">Custom</string>
    <string name="cutting_video_wait_moment">Cutting video, please wait a moment…</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="date">Date</string>
    <string name="default_notification_channel_id">max_notification_channel</string>
    <string name="default_notification_channel_name">VideoX</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_from_history">Delete from history</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_song">Delete song</string>
    <string name="delete_video">Delete video</string>
    <string name="demo_max_label">PLAY</string>
    <string name="demo_min_label">Min</string>
    <string name="descending">Descending</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="dialog_exit_confirm_description">Do you want to exit? This will cancel all files that are in progress.</string>
    <string name="dialog_exit_confirm_no">No</string>
    <string name="dialog_exit_confirm_title">Confirm Exit</string>
    <string name="dialog_exit_confirm_yes">Yes</string>
    <string name="discription">Body</string>
    <string name="do_u_want_to_dlt">Do you want to delete?</string>
    <string name="do_u_want_to_download_media_from_pvt">Don\'t Want to Download Media from Private Account?</string>
    <string name="do_you_like_our_app">do you like our app</string>
    <string name="do_you_want_to_watch_or_download_this_video">Do you want to watch or download this video?</string>
    <string name="download">Download</string>
    <string name="download_fail">An error occurred, download failed</string>
    <string name="download_from_private_account">Download from Private Account</string>
    <string name="download_started">Download Started</string>
    <string name="download_stories">Download from Stories</string>
    <string name="download_video">Download video</string>
    <string name="downloaded_videos">Downloaded videos</string>
    <string name="downloader">Downloader</string>
    <string name="downloading_videos">Downloading videos</string>
    <string name="downloads">Downloads</string>
    <string name="duplicate_name">Duplicate name</string>
    <string name="duplicate_playlist">Duplicate playlist</string>
    <string name="empty_music_name">Music name cannot be empty</string>
    <string name="empty_playlist_name">Playlist name cannot be empty</string>
    <string name="empty_video_name">Video name cannot be empty</string>
    <string name="enter_text">Type Here</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_valid_url">Enter Valid Url</string>
    <string name="equalizer">Equalizer</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_while_updating_equalizer">Error while updating Equalizer</string>
    <string name="exit">Exit</string>
    <string name="exitone">Are you sure, you want to exit?</string>
    <string name="favorite">Favorites</string>
    <string name="fbBanner">975928743724665_975928970391309</string>
    <string name="fbInter">975928743724665_975929050391301</string>
    <string name="fbNative">975928743724665_975929107057962</string>
    <string name="fbNativeBanner">975928743724665_975929143724625</string>
    <string name="fbbanner">986759485903361_986759712570005</string>
    <string name="fbinter">986759485903361_986759782569998</string>
    <string name="fbnative">986759485903361_986759845903325</string>
    <string name="featured_theme">Featured Theme</string>
    <string name="feedback">Help &amp; Feedback</string>
    <string name="file_deleted">File Deleted.</string>
    <string name="file_progress_status_failed">Failed</string>
    <string name="file_progress_status_sending">Sending …</string>
    <string name="file_progress_status_sent">Sent</string>
    <string name="file_progress_status_waiting">Waiting …</string>
    <string name="file_transfer">File Transfer</string>
    <string name="files_selection_subtitle">Select Files to Send</string>
    <string name="folders">Folder</string>
    <string name="fourth_how_too">2. Open Video Downloader</string>
    <string name="gallery">Downloads</string>
    <string name="gallery_name">Downloads</string>
    <string name="general">General</string>
    <string name="getting_downloading_link">Getting Downloading Link…</string>
    <string name="give_us_a_quick_rating_so_we_know_if_you_like_it">Give us a quick rating so we\nknow if you like it</string>
    <string name="give_us_exit">Give us quick feedback before you exit.</string>
    <string name="got_it">Got it</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_storage_permission">Grant Storage Permission</string>
    <string name="grant_storage_permission_dialog_description">Tap settings to open App Permission Settings and grant Storage permission from there.</string>
    <string name="guide_download_1">-Step 1: Copy link of video from app or website.</string>
    <string name="guide_download_2">-Step 2: Paste the copied link into the text input above.</string>
    <string name="guide_download_3">-Step 3: Choose to play or download this video.</string>
    <string name="guide_download_4">*Note: You must use a public link.</string>
    <string name="help_amp_feedback">Help &amp; Feedback</string>
    <string name="hidden_video">Private folder</string>
    <string name="hide_file">Lock in private folder</string>
    <string name="history">History</string>
    <string name="history_search">History Search</string>
    <string name="hotspot_error_dismiss_btn">Dismiss</string>
    <string name="hotspot_error_message">Some hardware problem is preventing hotspot from starting! Please restart this app or restart your phone and try again.</string>
    <string name="hotspot_error_title">Hotspot Error</string>
    <string name="hotspot_start_failed">Failed to start hotspot!</string>
    <string name="hotspot_status_error">Cannot start hotspot</string>
    <string name="hotspot_status_failed">Failed to receive files</string>
    <string name="hotspot_status_failure">Hotspot failure</string>
    <string name="hotspot_status_received">All files are received successfully</string>
    <string name="hotspot_status_receiving">Receiving Files …</string>
    <string name="hotspot_status_starting">Starting hotspot …</string>
    <string name="hotspot_status_waiting">Waiting for sender to connect …</string>
    <string name="hour">Hour</string>
    <string name="how_to_download">How to Download</string>
    <string name="how_to_use">How to use:</string>
    <string name="iap_des_1">Unlimited Premium Access</string>
    <string name="iap_des_2">All Updates &amp; New Features</string>
    <string name="iap_des_3">Completely Ad Free</string>
    <string name="iap_des_4">Quick Access to Your Apps</string>
    <string name="in_app_sound">In App Sound</string>
    <string name="info">Info</string>
    <string name="input_pin">Input PIN</string>
    <string name="input_text">Input text</string>
    <string name="insta_app_name">Instagram</string>
    <string name="length">Length</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="path">Path</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="total">Total</string>
</resources>