<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_center_dialog"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/divider1"
        android:background="@drawable/divider_dialog"
        android:layout_width="43dp"
        android:layout_height="4dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <RadioGroup
        android:orientation="vertical"
        android:id="@+id/rg_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/divider1">
        <RadioButton
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:id="@+id/rb_date"
            android:background="@drawable/bg_ripple_click"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="true"
            android:button="@null"
            android:text="@string/date"
            android:drawableEnd="@drawable/custom_check_box"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"/>
        <RadioButton
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:id="@+id/rb_name"
            android:background="@drawable/bg_ripple_click"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:text="@string/name"
            android:drawableEnd="@drawable/custom_check_box"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"/>
        <RadioButton
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:id="@+id/rb_size"
            android:background="@drawable/bg_ripple_click"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:text="@string/size"
            android:drawableEnd="@drawable/custom_check_box"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"/>
        <RadioButton
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:id="@+id/rb_length"
            android:background="@drawable/bg_ripple_click"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:text="@string/length"
            android:drawableEnd="@drawable/custom_check_box"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"/>
    </RadioGroup>
    <View
        android:id="@+id/divider2"
        android:background="@drawable/divider_dialog"
        android:layout_width="43dp"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_unit"/>
    <RadioGroup
        android:orientation="vertical"
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/divider2">
        <RadioButton
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:id="@+id/rb_ascending"
            android:background="@drawable/bg_ripple_click"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="true"
            android:button="@null"
            android:text="@string/ascending"
            android:drawableEnd="@drawable/custom_check_box"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"/>
        <RadioButton
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:id="@+id/rb_descending"
            android:background="@drawable/bg_ripple_click"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:button="@null"
            android:text="@string/descending"
            android:drawableEnd="@drawable/custom_check_box"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"/>
    </RadioGroup>
    <TextView
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:id="@+id/tv_dialog_ok"
        android:background="@drawable/bg_ripple_click"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ok"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_sort"/>
    <TextView
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:id="@+id/tv_dialog_cancel"
        android:background="@drawable/bg_ripple_click"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_dialog_ok"
        app:layout_constraintTop_toBottomOf="@+id/rg_sort"/>
</androidx.constraintlayout.widget.ConstraintLayout>
