<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/view_click"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_info"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_info"
        android:background="#98000000"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingStart="26dp"
        android:paddingEnd="26dp">
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:id="@+id/tv_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:maxLines="3"/>
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/size"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:id="@+id/tv_info_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:maxLines="3"/>
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:id="@+id/tv_info_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:maxLines="3"/>
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/length"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:id="@+id/tv_info_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:maxLines="3"/>
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/resolution"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:id="@+id/tv_info_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution"
            android:maxLines="3"/>
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/path"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:id="@+id/tv_info_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path"
            android:maxLines="3"/>
    </LinearLayout>
</RelativeLayout>
