<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_center_dialog"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_playlist"
        android:layout_centerVertical="true"
        android:layout_marginStart="10.58dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey1"
        android:id="@+id/edt_input_text"
        android:background="@drawable/bg_download"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/input_text"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:backgroundTint="@color/grey1"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"/>
    <TextView
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/tv_dialog_ok"
        android:background="@drawable/bg_ripple_click"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ok"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_text"/>
    <TextView
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/tv_dialog_cancel"
        android:background="@drawable/bg_ripple_click"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_dialog_ok"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>
