<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:paddingTop="26dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="400dp"
    android:paddingStart="26dp"
    android:paddingEnd="26dp">
    <View
        android:layout_gravity="center_horizontal"
        android:id="@+id/divider"
        android:background="@drawable/divider_dialog"
        android:layout_width="43dp"
        android:layout_height="4dp"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"/>
    <TextView
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:id="@+id/tv_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:maxLines="3"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/size"/>
    <TextView
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:id="@+id/tv_info_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:maxLines="3"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total"/>
    <TextView
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:id="@+id/tv_info_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:maxLines="3"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/path"/>
    <TextView
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:id="@+id/tv_info_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path"
        android:maxLines="3"/>
</LinearLayout>
